# seaglider_L123

./: .gitattributes  .gitignore  Makefile  Readme.md  mkdocs.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  seaglider_utils.py  sg_l123.py  sg_l123_files.py  sg_l123_plot.py  sg_l123_utils.py  utils.py
.github/workflows/: action.yml
config/: mission_meta.yml  var_meta.yml
docs/: index.md  reference.md
docs/dev/plans/: 2026-07-15-expand-docs.md
docs/development/: building-docs.md  code-style.md  contributing.md  index.md  testing.md
docs/reference/: entry-points.md  index.md  internals.md
docs/user-guide/: configuration.md  index.md  installation.md  running-plots.md  running-processing.md
testdata/simple/: NANOOS_mission.yml  p2490016.nc  p2490017.nc  p2490018.nc  p2490019.nc  p2490020.nc  p2490021.nc  p2490022.nc  p2490023.nc  p2490024.nc  p2490025.nc  p2490026.nc  p2490027.nc  p2490028.nc  p2490029.nc  p2490030.nc  p2490031.nc  p2490032.nc  p2490033.nc  p2490034.nc  p2490035.nc  p2490036.nc  p2490037.nc  p2490038.nc  p2490039.nc
tests/: test_seaglider_utils.py  test_sg_l123.py  test_sg_l123_plot.py  test_sg_l123_utils.py  test_utils.py
