[project]
name = "seaglider_l123"
version = "0.0.1"
description = "Seaglider Level 123 processing"
readme = "Readme.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy==2.3.5",
    "gsw==3.6.19",
    "plotly==6.4.0",
    "scipy==1.16.3",
    "isodate==0.7.2",
    "cmocean==4.0.3",
    "pyyaml==6.0.2",
    "xarray==2025.11.0",
    "netCDF4==1.7.2",
    "pydantic==2.9.2",
]
[project.optional-dependencies]
ci = [
    ## Testing
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    ## Linting
    "ruff==0.7.2",
    ## Static Typing
    "mypy==1.13.0",
    "types-PyYAML",
]
dev = [
    "mkdocs==1.6.1",
    "markdown-include==0.8.1",
    "mkdocstrings[python]==0.27.0",
    "mkdocs-material==9.5.46",
    ## Misc
    "ipython",
    "flynt",
]
[tool.mypy]
plugins = ['numpy.typing.mypy_plugin', 'pydantic.mypy']
# This only applies to the basestation extension being checked
mypy_path = '..'
files = ['sg_l123.py','sg_l123_plot.py', 'sg_l123_utils.py', 'sg_l123_files.py', 'utils.py', 'seaglider_utils.py']
strict = true
disable_error_code = ['attr-defined']

# Much of the numerical computing stack doesn't have type annotations yet.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "gsw.*",
    "seawater.*",
    "netCDF4.*",
    "scipy.*",
    "plotly.*",
    "cmocean.*",
    "isodate.*",
]

#[tool.pytest]
# To enable live logging during tests
#log_cli = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 120
output-format = 'pylint'
include = ["./*py", "tests/*py"]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Numpy2.0 compat
    "NPY201",
    # Docstrings - not yet
    #"D"
]
ignore = [
  # redundant-open-modes
  "UP015",
  # Use ternary operator
  "SIM108",
]
# Docstrings - not yet
[tool.ruff.lint.pydocstyle]
convention = "google"
